fix example lost when include-x-ms-examples-original-file false

--- a/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -17,8 +17,8 @@ import (
 {%- set allExamples = [] %}
 {%- for exampleGroup in exampleGroups %}
 {%- for example in exampleGroup.examples %}
-{%- if allExamples.indexOf(example.originalFile)<0 %}
-{%- set _ = allExamples.push(example.originalFile) %}
+{%- if allExamples.indexOf(example.name)<0 %}
+{%- set _ = allExamples.push(example.name) %}
 // Generated from example definition: https://github.com/Azure/azure-rest-api-specs/blob/{{swaggerCommit}}/{{example.originalFile}}
 func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}{% if exampleGroup.examples.length>1 %}_{{jsFunc.getExampleSuffix(example.name)}}{% endif %}() {
     cred, err := azidentity.NewDefaultAzureCredential(nil)
