--- a/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -12,8 +12,7 @@ var err error
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.lowerFirst(example.operationGroup.language.go.clientName) %}
         {%- if allVariables.indexOf(clientVariable)<0 %}
-    {{clientVariable}}, err := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{jsFunc.getParamsValue(example.clientParametersOutput) + ", " if example.clientParametersOutput.length>0 else ""}}testsuite.cred, testsuite.options)
-    testsuite.Require().NoError(err)
+    {{clientVariable}} := testsuite.clientFactory.{{example.operationGroup.language.go.clientCtorName}}()
         {%- set _ = allVariables.push(clientVariable) %}
         {%- endif %}
     {%- endif %}
