--- a/packages/autorest.gotest/src/template/exampleTest.go.njk
+++ b/packages/autorest.gotest/src/template/exampleTest.go.njk
@@ -32,7 +32,7 @@ func Example{{example.operationGroup.language.go.clientName}}_{{example.opName}}
     }
     {%- if example.returnInfo.length == 2 %}
     {%- if example.isLRO %}
-    poller, err := clientFactory.{{example.operationGroup.language.go.clientCtorName}}().{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
+    poller, err := clientFactory.{{example.operationGroup.language.go.clientCtorName}}({{jsFunc.getParamsValue(example.clientParametersOutput)}}).{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
     {%- else %}
     {% if example.checkResponse %}res{% else %}_{% endif %}, err {% if example.checkResponse %}:{% endif %}= clientFactory.{{example.operationGroup.language.go.clientCtorName}}().{{example.opName}}({{jsFunc.getParamsValue(example.methodParametersOutput)}})
     {%- endif %}
